# ganeti-instance-debootstrap

./: .gitignore  Makefile.am  NEWS  README  common.sh  common.sh.in  configure.ac  create  create.in  defaults  export  import  rename
devel/: upload
