AC_PREREQ(2.59)
AC_INIT(ganeti-instance-debootstrap, 0.4, ganeti@googlegroups.com)

AC_CONFIG_AUX_DIR(autotools)
AC_CONFIG_SRCDIR(configure)

AM_INIT_AUTOMAKE([1.9 foreign tar-ustar -Wall -Wno-portability])

# Check common programs
AC_PROG_INSTALL
AC_PROG_LN_S

AC_CONFIG_FILES([ Makefile ])

AC_OUTPUT
